# language-game-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
resources/: de-de.json
resources/word_pack/: dativ-verben-DE.json  de-de.json  most-frequent-nouns-US.json
resources/words/: pt-br.json
src/: main.rs
src/general/: context.rs  game_options.rs  image.rs  language.rs  message.rs  mod.rs  resources.rs  state.rs  translation.rs  word_pack.rs
src/gui/: acknowledgments.rs  answer_view.rs  end_turn_view.rs  end_view.rs  game_view.rs  helper_tips_view.rs  mod.rs  options_view.rs  question_view.rs  simple_widget_trait.rs  start_view.rs
src/translation/: google.rs  mod.rs  mymemory.rs  translate.rs  yandex.rs
