[package]
name = "language-game-rs"
version = "0.1.0"
authors = ["janosimas <janosimas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.13.0", features = ["json"] }
reqwest = { version = "0.10", features = ["json"] }
iced = { version = "0.1", features = ["image", "debug", "tokio"] }
iced_futures = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
serde_json = "1.0"
dotenv = "0.15.0"
rand = "0.7.3"
fern = "0.6.0"
log = "0.4.8"
chrono = "0.4.11"
async-trait = "0.1.32"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced_native ="0.2.2"
async-std = "1.5.0"
directories = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"