[package]
name = "language-game-rs"
version = "0.1.0"
authors = ["janosimas <janosimas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.2", features = ["image", "debug", "tokio_old"] }
iced_futures = "0.2"
futures = "0.3.8"
async-trait = "0.1.42"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
dotenv = "0.15.0"
rand = "0.7.3"
fern = "0.6.0"
log = "0.4.11"
chrono = "0.4.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced_native = "0.3.0"
directories = "3.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.46", features = ["Window", "Storage"] }
wasm-timer = "0.2.5"
